--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     href="https://www.pinclipart.com/picdir/big/519-5195496_sun-clip-art-transparent-background-sun-clipart-png.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Just a weather app" />
+  <link rel="apple-touch-icon"
+    href="https://www.pinclipart.com/picdir/big/519-5195496_sun-clip-art-transparent-background-sun-clipart-png.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Weather app</title>
 </head>
 
 <body>
